--- a/impls/Cargo.toml
+++ b/impls/Cargo.toml
@@ -46,6 +46,9 @@ regex = "1.3"
 timer = "0.2"
 sysinfo = "0.9"
 flate2 = "1.0"
+qr_code = "1.1"
+image = "0.23.14"
+quircs = "0.10"
 
 epic_wallet_util = { path = "../util", version = "3.3.2" }
 epic_wallet_config = { path = "../config", version = "3.3.2" }
