--- a/impls/Cargo.toml
+++ b/impls/Cargo.toml
@@ -46,7 +46,7 @@ regex = "1.3"
 timer = "0.2"
 sysinfo = "0.9"
 flate2 = "1.0"
-qr_code = "1.1"
+qrcode = "0.12"
 image = "0.23.14"
 quircs = "0.10"
 
